fixed profile null tracks and artists, formated when no posts

--- a/All Project Code & Components/src/views/pages/home.ejs
+++ b/All Project Code & Components/src/views/pages/home.ejs
@@ -164,8 +164,16 @@
                                 </script>
 
                                 <% } else { %>
-                                    <div class=" col-12">
-                                        <h1>No Posts Found</h1>
+                                    <div class="col-12">
+                                        <div class="container box-shadow"
+                                            style="position: relative; max-width: 390px; width: 100%; height: fit-content; padding: 0px;">
+                                            <div class="col"
+                                                style="width: 100%; height: fit-content; border-color: black; border-width: 1px; border-style: solid; padding: 12px;">
+                                                <h2 style="padding-bottom: 4px;">
+                                                    No Posts Found
+                                                </h2>
+                                            </div>
+                                        </div>
                                     </div>
                                     <% } %>
                 </div>
