top range is now 4 weeks

--- a/All Project Code & Components/src/views/pages/profile.ejs
+++ b/All Project Code & Components/src/views/pages/profile.ejs
@@ -132,8 +132,8 @@
                           <div class="d-flex align-items-center">
                             <img src="<%= song.album.images[0].url %>" alt="Album cover"
                               style="width: 80px; height: auto;">
-                            <div style="padding-left: 20px;">
-                              <h2>
+                            <div style="padding-left: 20px; max-width: 200px;">
+                              <h2 style="word-wrap: break-word;">
                                 <%= song.name %>
                               </h2>
                               <h3 style="font-size: 14px; margin-top: 8px;">
